--- a/frontend/src/app/ui/screens/login/login-screen/login-screen.component.html
+++ b/frontend/src/app/ui/screens/login/login-screen/login-screen.component.html
@@ -1,35 +1,47 @@
-<div class="
+<div
+    class="
 bg-[url('https://img.freepik.com/foto-gratis/colegas-que-trabajan-juntos-usando-computadora-portatil-documentos_23-2149330952.jpg?t=st=1718326462~exp=1718330062~hmac=316d6da58c0f0e09c12516840f4d2286982d86c2dc62bd9ba7885e98e55d1e42&w=1480')]">
     <div class="flex flex-col hero min-h-screen backdrop-blur-sm bg-black/[.4]">
         <div class="hero flex-grow">
             <div class="hero-content flex-col lg:flex-row-reverse lg:w-7/12 sm:w-full">
                 <div class="card shrink-0 w-full max-w-sm shadow-2xl bg-base-100 lg:w-6/12 sm:w-full">
                     <div class="card-body">
-                        <div class="form-control mt-0 mb-2"> 
+                        <div class="form-control mt-0 mb-2">
                             <div class="text-3xl font-bold text-center">Inicio de sesión</div>
                         </div>
                         <div class="form-control">
                             <label class="label">
                                 <span class="label-text">Usuario</span>
                             </label>
-                            <input type="text" placeholder="usuario" class="input input-bordered" 
-                                [(ngModel)]="username" [ngClass]="{'border-red-500': emptyFields.includes('username')}"/>
+                            <label class="input input-bordered flex items-center gap-2" [ngClass]="{'border-red-500': emptyFields.includes('username')}">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="w-4 h-4 opacity-70">
+                                    <path
+                                        d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM12.735 14c.618 0 1.093-.561.872-1.139a6.002 6.002 0 0 0-11.215 0c-.22.578.254 1.139.872 1.139h9.47Z" />
+                                </svg>
+                                <input type="text" placeholder="Usuario" class="grow" [(ngModel)]="username" />
+                            </label>
                             @if (emptyFields.includes("username")) {
-                                <span class="flex items-center font-medium tracking-wide text-red-500 text-xs mt-1 ml-1">
-                                    Ingrese su usuario
-                                </span>
+                            <span class="flex items-center font-medium tracking-wide text-red-500 text-xs mt-1 ml-1">
+                                Ingrese su usuario
+                            </span>
                             }
                         </div>
                         <div class="form-control">
                             <label class="label">
                                 <span class="label-text">Contraseña</span>
                             </label>
-                            <input type="password" placeholder="Contraseña" class="input input-bordered" 
-                                [(ngModel)]="password" [ngClass]="{'border-red-500': emptyFields.includes('password')}"/>
+                            <label class="input input-bordered flex items-center gap-2" [ngClass]="{'border-red-500': emptyFields.includes('password')}">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="w-4 h-4 opacity-70">
+                                    <path fill-rule="evenodd"
+                                        d="M14 6a4 4 0 0 1-4.899 3.899l-1.955 1.955a.5.5 0 0 1-.353.146H5v1.5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1-.5-.5v-2.293a.5.5 0 0 1 .146-.353l3.955-3.955A4 4 0 1 1 14 6Zm-4-2a.75.75 0 0 0 0 1.5.5.5 0 0 1 .5.5.75.75 0 0 0 1.5 0 2 2 0 0 0-2-2Z"
+                                        clip-rule="evenodd" />
+                                </svg>
+                                <input type="password" placeholder="Contraseña" class="grow" [(ngModel)]="password" />
+                            </label>
                             @if (emptyFields.includes("password")) {
-                                <span class="flex items-center font-medium tracking-wide text-red-500 text-xs mt-1 ml-1">
-                                    Ingrese una contraseña
-                                </span>
+                            <span class="flex items-center font-medium tracking-wide text-red-500 text-xs mt-1 ml-1">
+                                Ingrese una contraseña
+                            </span>
                             }
                         </div>
                         <div class="form-control mt-6">
@@ -39,7 +51,7 @@ bg-[url('https://img.freepik.com/foto-gratis/colegas-que-trabajan-juntos-usando-
                 </div>
             </div>
         </div>
-        <app-footer></app-footer>    
+        <app-footer></app-footer>
     </div>
 </div>
 <app-dialog></app-dialog>
