--- a/frontend/src/app/ui/screens/payment-reports/payment-reports.component.html
+++ b/frontend/src/app/ui/screens/payment-reports/payment-reports.component.html
@@ -2,11 +2,13 @@
     <app-title title="Reportes de nómina"></app-title>
 </div>
 <div class="stats shadow mt-3 ml-4">
-    <div class="stat">
-        <div class="stat-title">Total nomina:</div>
-        <div class="stat-value">$11,000,000</div>
-        <div class="stat-desc">Periodo: 1 jun 2024 - 30 jun 2024</div>
-    </div>
+    @if(employeeList.length > 0) {
+        <div class="stat">
+            <div class="stat-title">Total nomina:</div>
+            <div class="stat-value">{{formatedPayment}}</div>
+            <div class="stat-desc">Periodo: 1 {{obtenerMesActual()}} 2024 - 30 {{obtenerMesActual()}} 2024</div>
+        </div>
+    }
 </div>
 <div class="card bg-base-100 shadow-xl mt-4 mb-4 p-1 relative overflow-visible mr-4 ml-4">
     <div class="relative overflow-x-auto">
@@ -22,12 +24,12 @@
                 </tr>
             </thead>
             <tbody>
-                @for (employee of employeeList; track employee) {
+                @for (employee of employeeList; track $index) {
                 <tr class="hover">
-                    <th>{{ employee.id }}</th>
+                    <th>{{ $index + 1 }}</th>
                     <td>{{ employee.identifier }}</td>
                     <td>{{ employee.name }} {{ employee.lastName }}</td>
-                    <td>{{ employee.position }}</td>
+                    <td>{{ employee.name }}</td>
 
                     <td class="flex align-center gap-2 justify-center">
                         <label>
@@ -46,13 +48,5 @@
                 }
             </tbody>
         </table>
-        <div class="join flex justify-end mt-3 mr-3 mb-2">
-            <button class="join-item btn btn-outline btn-sm">«</button>
-            <input class="join-item btn btn-outline btn-sm" type="radio" name="options" aria-label="1" checked />
-            <input class="join-item btn btn-outline btn-sm" type="radio" name="options" aria-label="2" />
-            <input class="join-item btn btn-outline btn-sm" type="radio" name="options" aria-label="3" />
-            <input class="join-item btn btn-outline btn-sm" type="radio" name="options" aria-label="4" />
-            <button class="join-item btn btn-outline btn-sm">»</button>
-        </div>
     </div>
 </div>
