--- a/frontend/src/app/ui/screens/dashboard/components/info-card/info-card.component.html
+++ b/frontend/src/app/ui/screens/dashboard/components/info-card/info-card.component.html
@@ -10,6 +10,9 @@
                 @if (subtitle != "") {
                     <div class="stat-desc text-wrap">{{subtitle}}</div>
                 }
+                @if (subtitle2 != "") {
+                    <div class="stat-desc text-wrap">{{subtitle2}}</div>
+                }
             </div>
         </div>
     </div>
@@ -18,13 +21,16 @@
         <div class="stat place-items-center w-full">
             <div class="text-2xl font-semibold text-wrap">{{title}}</div>
             @if (editable) {
-                <input type="text" class="stat-title text-wrap input input-ghost text-center" [value]="value">
-                <!-- <select class="select select-ghost w-full max-w-xs stat-title text-wrap" [(ngModel)]="value">
-                    <option disabled selected >Pick the best JS framework</option>
-                    <option>Svelte</option>
-                    <option>Vue</option>
-                    <option>React</option>
-                </select> -->
+                @if(data.length > 0) {
+                    <select class="select select-ghost w-full max-w-xs stat-title text-wrap" [(ngModel)]="value">
+                        <option disabled selected value="">seleccione una opción</option>
+                        @for (item of data; track $index) {
+                            <option [value]="item.value">{{item.label}}</option>
+                        }
+                    </select> 
+                } @else {
+                    <input type="text" class="stat-title text-wrap input input-ghost text-center" [value]="value">
+                }
             } @else {
                 <div class="stat-title text-wrap">{{value}}</div>
             }
