--- a/frontend/src/app/ui/screens/employee-detail/employee-detail.component.html
+++ b/frontend/src/app/ui/screens/employee-detail/employee-detail.component.html
@@ -8,10 +8,25 @@
       </div>
       @if (loaded) {
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 pt-4">
-            <info-card title="ARL" value="Seguros Bolívar" [editable]="true"></info-card>
-            <info-card title="Seguro Social" value="Mutualser" [editable]="true"></info-card>
-            <info-card title="Pensión" value="Protección" [editable]="true"></info-card>
-            <info-card title="Cesantías" value="Protección" [editable]="true"></info-card>
+            <info-card title="ARL" 
+            [value]="userDetail!.arlInsurance.toString()" 
+            [editable]="true"
+            [data]="getArlData()"></info-card>
+            <info-card 
+            title="Seguro Social" 
+            [value]="userDetail!.healthyInsurance.toString()" 
+            [editable]="true"
+            [data]="getHelathyInsuranceData()"></info-card>
+            <info-card 
+            title="Pensión" 
+            [value]="userDetail!.pension.toString()" 
+            [editable]="true"
+            [data]="getPensionData()"></info-card>
+            <info-card 
+            title="Cesantías" 
+            [value]="userDetail!.cesantias.toString()" 
+            [editable]="true"
+            [data]="getCesantiasData()"></info-card>
         </div>
         }
     <div class="card w-full bg-base-100 shadow-xl mt-4 mb-4">
@@ -26,11 +41,24 @@
             </h2>     
             @if (loaded && userDetail) {   
                 <div class="grid grid-cols-2 gap-4">
-                    <info-card title="Tiempo en la compañía" [value]="getWorkDays()" [subtitle]="'Fecha de ingreso: ' + getFormattedDate(userDetail!.admissionDate)" [child]="true">
+                    @if(getIsActive()) {
+                    <info-card title="Tiempo en la compañía" [value]="getWorkDays()" 
+                        [subtitle]="'Fecha de ingreso: ' + getFormattedDate(userDetail!.admissionDate)" 
+                        [child]="true">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-7" icon>
                             <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 0 0 .75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 0 0-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0 1 12 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 0 1-.673-.38m0 0A2.18 2.18 0 0 1 3 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 0 1 3.413-.387m7.5 0V5.25A2.25 2.25 0 0 0 13.5 3h-3a2.25 2.25 0 0 0-2.25 2.25v.894m7.5 0a48.667 48.667 0 0 0-7.5 0M12 12.75h.008v.008H12v-.008Z" />
                         </svg>
                     </info-card>
+                    } @else {
+                        <info-card title="Tiempo en la compañía" [value]="getWorkDays()" 
+                        [subtitle]="'Fecha de ingreso: ' + getFormattedDate(userDetail!.admissionDate)" 
+                        [subtitle2]="'Fecha de retiro: ' + getFormattedDate(userDetail!.retirementDate!)"
+                        [child]="true">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-7" icon>
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 0 0 .75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 0 0-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0 1 12 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 0 1-.673-.38m0 0A2.18 2.18 0 0 1 3 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 0 1 3.413-.387m7.5 0V5.25A2.25 2.25 0 0 0 13.5 3h-3a2.25 2.25 0 0 0-2.25 2.25v.894m7.5 0a48.667 48.667 0 0 0-7.5 0M12 12.75h.008v.008H12v-.008Z" />
+                            </svg>
+                        </info-card>
+                    }
                 </div>    
             }         
         </div>
