--- a/frontend/src/app/ui/screens/reports/reports.component.html
+++ b/frontend/src/app/ui/screens/reports/reports.component.html
@@ -2,7 +2,7 @@
     <div class="bg-base-100 rounded-2xl shadow-lg pr-3 pl-3 pt-4 pb-4 mt-4">
         <a class="btn btn-ghost text-xl pointer-events-none mb-4">Comprobante de nómina
             @if(id != "") {
-                <span>- Juan Morelos Acosta</span>
+                <span>- {{userReport?.name}} {{userReport?.lastName}}</span>
             }
         </a>
         <div class="flex content-start gap-4 items-end">
@@ -41,11 +41,18 @@
                         d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
                 </svg>
             </button>
+            <button class="btn btn-primary" [ngClass]="{'btn-disabled': !showReport}" (click)="searchPayment()">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+                    <path fill-rule="evenodd" d="M5.625 1.5c-1.036 0-1.875.84-1.875 1.875v17.25c0 1.035.84 1.875 1.875 1.875h12.75c1.035 0 1.875-.84 1.875-1.875V12.75A3.75 3.75 0 0 0 16.5 9h-1.875a1.875 1.875 0 0 1-1.875-1.875V5.25A3.75 3.75 0 0 0 9 1.5H5.625ZM7.5 15a.75.75 0 0 1 .75-.75h7.5a.75.75 0 0 1 0 1.5h-7.5A.75.75 0 0 1 7.5 15Zm.75 2.25a.75.75 0 0 0 0 1.5H12a.75.75 0 0 0 0-1.5H8.25Z" clip-rule="evenodd" />
+                    <path d="M12.971 1.816A5.23 5.23 0 0 1 14.25 5.25v1.875c0 .207.168.375.375.375H16.5a5.23 5.23 0 0 1 3.434 1.279 9.768 9.768 0 0 0-6.963-6.963Z" />
+                  </svg>                  
+                Exportar PDF
+            </button>
         </div>
     </div>
     @if (showReport) {
         <div class="mt-4 mb-4">
-            <report-detail [month]="month" [year]="year" [month_letter]="getMonth(month)"></report-detail>
+            <report-detail [month]="month" [year]="year" [month_letter]="getMonth(month)" [data]="report"></report-detail>
         </div>
     }
 </div>
