--- a/frontend/src/app/ui/screens/employee-register/employee-register.component.html
+++ b/frontend/src/app/ui/screens/employee-register/employee-register.component.html
@@ -5,19 +5,57 @@
                 Datos de empleado
             </h2>                
         </div>
-        <user-forn [editable]="true" [blank]="true">
+        <div class="pl-8 pr-8 pb-8">
+            <div class="grid grid-cols-2 gap-4">
+                <div class="form-control">
+                    <label class="label">
+                        <span class="label-text font-semibold">Nombre</span>
+                    </label>
+                    <input type="text" class="input input-bordered" [(ngModel)]="name" />
+                </div>
+                <div class="form-control">
+                    <label class="label">
+                        <span class="label-text font-semibold">Apellido</span>
+                    </label>
+                    <input type="text" class="input input-bordered" [(ngModel)]="lastName" />
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 mt-4">
+                <div class="form-control">
+                    <label class="label">
+                        <span class="label-text font-semibold">Email personal</span>
+                    </label>
+                    <input type="email" class="input input-bordered" [(ngModel)]="email" />
+                </div>
+                <div class="form-control">
+                    <label class="label">
+                        <span class="label-text font-semibold">Privilegios</span>
+                    </label>
+                    <select class="select select-bordered w-full" [(ngModel)]="privileges">
+                        <option disabled selected value="">Selecciona una opción</option>
+                        <option value="1">Super administrador</option>
+                        <option value="2">Administrador</option>
+                        <option value="3">Empleado</option>
+                    </select>
+                </div>
+            </div>
             <div class="grid grid-cols-2 gap-4 mt-4">
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text font-semibold">Cargo</span>
                     </label>
-                    <input type="text" class="input input-bordered"/>
+                    <select class="select select-bordered w-full" [(ngModel)]="position">
+                        <option disabled selected value="">Selecciona una opción</option>
+                        @for (item of getPositions(); track $index) {
+                            <option [value]="item.value">{{item.label}}</option>
+                        }
+                    </select>
                 </div>
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text font-semibold">Salario</span>
                     </label>
-                    <input type="text" class="input input-bordered"/>
+                    <input type="text" class="input input-bordered" [(ngModel)]="salary"/>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 mt-4">
@@ -25,13 +63,13 @@
                     <label class="label">
                         <span class="label-text font-semibold">Fecha de nacimiento</span>
                     </label>
-                    <input type="date" class="input input-bordered" />
+                    <input type="date" class="input input-bordered" [(ngModel)]="birthdate"/>
                 </div>
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text font-semibold">Identificación</span>
                     </label>
-                    <input type="number" class="input input-bordered"/>                
+                    <input type="number" class="input input-bordered" [(ngModel)]="identifier"/>                
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 mt-4">
@@ -39,13 +77,23 @@
                     <label class="label">
                         <span class="label-text font-semibold">Pensión</span>
                     </label>
-                    <input type="text" class="input input-bordered" />
+                    <select class="select select-bordered w-full" [(ngModel)]="pension">
+                        <option disabled selected value="">Selecciona una opción</option>
+                        @for (item of getPensionData(); track $index) {
+                            <option [value]="item.value">{{item.label}}</option>
+                        }
+                    </select>
                 </div>
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text font-semibold">ARL</span>
                     </label>
-                    <input type="text" class="input input-bordered"/>                
+                    <select class="select select-bordered w-full" [(ngModel)]="arlInsurance">
+                        <option disabled selected value="">Selecciona una opción</option>
+                        @for (item of getArlData(); track $index) {
+                            <option [value]="item.value">{{item.label}}</option>
+                        }
+                    </select>             
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 mt-4">
@@ -53,13 +101,23 @@
                     <label class="label">
                         <span class="label-text font-semibold">Seguro social</span>
                     </label>
-                    <input type="text" class="input input-bordered"/>
+                    <select class="select select-bordered w-full" [(ngModel)]="healthyInsurance">
+                        <option disabled selected value="">Selecciona una opción</option>
+                        @for (item of getHelathyInsuranceData(); track $index) {
+                            <option [value]="item.value">{{item.label}}</option>
+                        }
+                    </select>
                 </div>
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text font-semibold">Cesantías</span>
                     </label>
-                    <input type="text" class="input input-bordered"/>
+                    <select class="select select-bordered w-full" [(ngModel)]="cesantias">
+                        <option disabled selected value="">Selecciona una opción</option>
+                        @for (item of getCesantiasData(); track $index) {
+                            <option [value]="item.value">{{item.label}}</option>
+                        }
+                    </select>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 mt-4">
@@ -67,19 +125,33 @@
                     <label class="label">
                         <span class="label-text font-semibold">Usuario</span>
                     </label>
-                    <input type="text" class="input input-bordered"/>
+                    <input type="text" class="input input-bordered" [(ngModel)]="username"/>
                 </div>
                 <div class="form-control">
                     <label class="label">
                         <span class="label-text font-semibold">Contraseña</span>
                     </label>
-                    <input type="text" class="input input-bordered"/>
+                    <input type="password" class="input input-bordered" [(ngModel)]="password"/>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 mt-4">
+                <div class="form-control">
+                    <label class="label">
+                        <span class="label-text font-semibold">Número de cuenta</span>
+                    </label>
+                    <input type="text" class="input input-bordered" [(ngModel)]="account"/>
                 </div>
             </div>
             <div class="">
-                <button class="btn btn-square btn-primary mt-4 w-64">Registrar empleado</button>
+                <button class="btn btn-square btn-primary mt-4 w-64" (click)="regiterUser()">Registrar empleado</button>
             </div>
-        </user-forn>
+        </div>
+    </div>
+</div>
+
+<div class="toast toast-bottom toast-end toast-transition" [ngClass]="{'show': showWarning, 'hide': !showWarning && warningDismissed}">
+    <div class="alert" [ngClass]="{'alert-warning': typeWarning(), 'alert-success': typeSuccess()}">
+        <span>{{toastMessage}}</span>
     </div>
 </div>
 
